Started trying to figure out Json requests, its a mess right now but I'm getting it done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JokeApp</string>
+    <string name="title_activity_random_joke">RandomJoke</string>
 </resources>
